--- a/index.html
+++ b/index.html
@@ -11,11 +11,16 @@
         body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
         }
 
         .container {
             max-width: 800px;
-            margin: 0 auto;
             padding: 20px;
             background-color: #fff;
             border-radius: 5px;
@@ -24,6 +29,7 @@
 
         h1 {
             text-align: center;
+            color: #333;
         }
 
         table {
@@ -52,6 +58,7 @@
             margin-bottom: 10px;
             border: 1px solid #ccc;
             border-radius: 4px;
+            outline: none;
         }
 
         select {
@@ -59,7 +66,7 @@
         }
 
         button {
-            background-color: #333;
+            background-color: #007BFF;
             color: #fff;
             padding: 10px 20px;
             border: none;
@@ -68,7 +75,7 @@
         }
 
         button:hover {
-            background-color: #555;
+            background-color: #0056b3;
         }
     </style>
 </head>
