--- a/tela-cadastro.html
+++ b/tela-cadastro.html
@@ -7,23 +7,34 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            background-color: #f0f0f0;
             margin: 0;
             padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
         }
 
         .container {
             max-width: 400px;
-            margin: 0 auto;
-            padding: 20px;
+            padding: 45px;
             background-color: #fff;
-            border-radius: 5px;
+            border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+            text-align: center; /* Adicionei isso para centralizar o conteúdo */
         }
 
         h2 {
             text-align: center;
             color: #333;
+            margin-bottom: 20px;
+        }
+
+        /* Estilos para alinhar os campos e botão */
+        .form-group {
+            margin-bottom: 15px;
+            text-align: left; /* Alinha o texto à esquerda */
         }
 
         label {
@@ -34,28 +45,30 @@
 
         input[type="text"], input[type="password"], select {
             width: 100%;
-            padding: 10px;
-            margin-bottom: 10px;
+            padding: 12px;
             border: 1px solid #ccc;
-            border-radius: 4px;
+            border-radius: 5px;
+            outline: none;
         }
 
         select {
-            padding: 8px;
+            padding: 10px;
         }
 
         button {
-            background-color: #333;
+            background-color: #007BFF;
             color: #fff;
-            padding: 10px 20px;
+            padding: 12px 0;
             border: none;
-            border-radius: 4px;
+            border-radius: 5px;
             cursor: pointer;
             width: 100%;
+            font-weight: bold;
+            font-size: 16px;
         }
 
         button:hover {
-            background-color: #555;
+            background-color: #0056b3;
         }
     </style>
 </head>
@@ -63,20 +76,29 @@
     <div class="container">
         <h2>Cadastro de Usuários</h2>
         <form id="cadastroForm">
-            <label for="nome">Nome do Usuário:</label>
-            <input type="text" id="nome" name="nome" maxlength="150" required>
+            <!-- Adicione a classe "form-group" para cada grupo de campo e rótulo -->
+            <div class="form-group">
+                <label for="nome">Nome do Usuário:</label>
+                <input type="text" id="nome" name="nome" maxlength="150" required>
+            </div>
 
-            <label for="email">E-mail do Usuário:</label>
-            <input type="text" id="email" name="email" maxlength="20" required>
+            <div class="form-group">
+                <label for="email">E-mail do Usuário:</label>
+                <input type="text" id="email" name="email" maxlength="20" required>
+            </div>
 
-            <label for="senha">Senha do Usuário:</label>
-            <input type="password" id="senha" name="senha" maxlength="8" required>
+            <div class="form-group">
+                <label for="senha">Senha do Usuário:</label>
+                <input type="password" id="senha" name="senha" maxlength="8" required>
+            </div>
 
-            <label for="status">Status do Usuário:</label>
-            <select id="status" name="status">
-                <option value="Ativo">Ativo</option>
-                <option value="Excluído">Excluído</option>
-            </select>
+            <div class="form-group">
+                <label for="status">Status do Usuário:</label>
+                <select id="status" name="status">
+                    <option value="Ativo">Ativo</option>
+                    <option value="Excluído">Excluído</option>
+                </select>
+            </div>
 
             <button type="submit">Salvar</button>
         </form>
