--- a/tela-edicao.html
+++ b/tela-edicao.html
@@ -5,58 +5,65 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edição de Usuário</title>
     <style>
-        /* Estilos CSS aqui, se necessário */
         body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
             margin: 0;
             padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
         }
 
         .container {
             max-width: 400px;
-            margin: 0 auto;
-            padding: 20px;
+            padding: 45px;
             background-color: #fff;
-            border-radius: 5px;
+            border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+            text-align: center;
         }
 
         h2 {
-            text-align: center;
             color: #333;
+            margin-bottom: 20px;
         }
 
         label {
             display: block;
-            margin-bottom: 5px;
+            margin-bottom: 8px;
             color: #333;
+            text-align: left;
         }
 
         input[type="text"], input[type="password"], select {
             width: 100%;
-            padding: 10px;
-            margin-bottom: 10px;
+            padding: 12px;
             border: 1px solid #ccc;
-            border-radius: 4px;
+            border-radius: 5px;
+            outline: none;
+            margin-bottom: 20px;
         }
 
         select {
-            padding: 8px;
+            padding: 10px;
         }
 
         button {
-            background-color: #333;
+            background-color: #007BFF;
             color: #fff;
-            padding: 10px 20px;
+            padding: 12px 0;
             border: none;
-            border-radius: 4px;
+            border-radius: 5px;
             cursor: pointer;
             width: 100%;
+            font-weight: bold;
+            font-size: 16px;
         }
 
         button:hover {
-            background-color: #555;
+            background-color: #0056b3;
         }
     </style>
 </head>
@@ -68,7 +75,7 @@
             <input type="text" id="nome" name="nome" maxlength="150" required>
 
             <label for="email">E-mail do Usuário:</label>
-            <input type="text" id="email" name="email" maxlength="20" required>
+            <input type="text" id="email" name="email" maxlength="50" required>
 
             <label for="senha">Senha do Usuário:</label>
             <input type="password" id="senha" name="senha" maxlength="8" required>
