--- a/tela-cadastro.html
+++ b/tela-cadastro.html
@@ -17,7 +17,8 @@
         }
 
         .container {
-            max-width: 400px;
+            max-width: 800px;
+            margin: 0 auto;
             padding: 45px;
             background-color: #fff;
             border-radius: 8px;
@@ -49,6 +50,8 @@
             border: 1px solid #ccc;
             border-radius: 5px;
             outline: none;
+            font-size: 16px;
+            margin-bottom: 10px;
         }
 
         select {
@@ -65,10 +68,23 @@
             width: 100%;
             font-weight: bold;
             font-size: 16px;
+            transition: all 0.3s ease-in-out;
         }
 
         button:hover {
             background-color: #0056b3;
+        }
+
+        /* Estilos para dispositivos móveis */
+        @media only screen and (max-width: 600px) {
+            .container {
+                max-width: 400px;
+                padding: 20px;
+            }
+
+            input[type="text"], input[type="password"], select {
+                font-size: 14px;
+            }
         }
     </style>
 </head>
